[package]
name = "tlschecker"
version = "1.1.1"
edition = "2018"
description = "Experimental TLS/SSL certificate checker from command line"
authors = ["Jose Bovet Derpich <jose.bovet@gmail.com>"]
license = "GNU"
readme = "README.md"
repository = "https://github.com/jbovet/tlschecker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = { version = "0.14.0", features = ["process", "push"] }
openssl = { version = "0.10.75", features = ["vendored"] }
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
comfy-table = "7.2.1"
strum = "0.27.2"
strum_macros = "0.27.2"
lazy_static = "1.5.0"
url = "2.5.7"
reqwest = { version = "0.13.0", features = ["blocking", "json"] }
toml = "0.9.8"
tempfile = "3.23.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[[bin]]
name = "tlschecker"
test = true
doc = true
