[package]
name = "tlschecker"
version = "1.1.1"
edition = "2018"
rust-version = "1.77.0"                                                    # MSRV
description = "Experimental TLS/SSL certificate checker from command line"
authors = ["Jose Bovet Derpich <jose.bovet@gmail.com>"]
license = "GNU"
readme = "README.md"
repository = "https://github.com/jbovet/tlschecker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = { version = "0.14.0", features = ["process", "push"] }
openssl = { version = "0.10.78", features = ["vendored"] }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
comfy-table = "7.2.2"
strum = "0.28.0"
strum_macros = "0.28.0"
lazy_static = "1.5.0"
url = "2.5.8"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
toml = "1.1.2+spec-1.1.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[[bin]]
name = "tlschecker"
test = true
doc = true
