[package]
name = "tlschecker"
version = "1.1.1"
edition = "2021"
rust-version = "1.88.0"                                                    # MSRV (required by ratatui 0.30)
description = "Experimental TLS/SSL certificate checker from command line"
authors = ["Jose Bovet Derpich <jose.bovet@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/jbovet/tlschecker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = { version = "0.14.0", features = ["process", "push"] }
openssl = { version = "0.10.81", features = ["vendored"] }
# Locates the OS trust store; needed because `openssl` is vendored, so its
# compiled-in default cert paths do not exist on macOS (and vary on Linux).
openssl-probe = "0.2.1"
clap = { version = "4.6.3", features = ["derive"] }
serde_json = "1.0.151"
serde = { version = "1.0.229", features = ["derive"] }
comfy-table = "7.2.2"
strum = "0.28.0"
strum_macros = "0.28.0"
url = "2.5.8"
# Already in the dependency tree via `url`; used directly for IDN -> A-label
# (punycode) hostname conversion.
idna = "1.1.0"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
toml = "1.1.3+spec-1.1.0"
tempfile = "3.27.0"
thiserror = "2.0.19"
anyhow = "1.0.104"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ratatui = { version = "0.30.2", optional = true }

[features]
# The interactive terminal dashboard (default output on a TTY). Library
# consumers can use `default-features = false` to skip the TUI stack.
default = ["tui"]
tui = ["dep:ratatui"]

[[bin]]
name = "tlschecker"
test = true
doc = true
required-features = ["tui"]

[dev-dependencies]
openssl = "0.10.81"
